--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@nuxtjs/font-awesome": "^1.0.3",
+    "@nuxtjs/vuetify": "^0.4.2",
     "axios": "^0.16.2",
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
